[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lmos_database"
version = "0.1.0"
description = "Database ORM models and actions for use in LMOS"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "sqlalchemy",
    "sqlalchemy-utils",
    "psycopg2-binary",
    "redis",
    "asyncpg",
    "pydantic"
]

[project.urls]
homepage = "https://lmos.io/"
repository = "https://github.com/LMOS-IO/LMOS-database"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
package-data = { "lmos_database" = ["py.typed"] }
